[project]
name = "healthcare-terminology-mcp"
version = "0.1.0"
description = "MCP server exposing ICD-10-CM, RxNorm, and LOINC lookups via the NLM public APIs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: hits real NLM/CMS APIs (skipped by default; run with --run-live)",
]
